--- a/data-field.css
+++ b/data-field.css
@@ -11,61 +11,70 @@ justify-content: center;
 }
 .data-field-head>div{
   background-color: rgb(43, 159, 226);
-  min-width: 50px;
+  /* min-width: 50px; */
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
+  border: 1px solid black;
 }
 .data-field-head>div:nth-child(1){
-  background-color: rgb(86, 226, 43);
-  min-width: 1cm;
+  background-color: gold;
+  width: 1cm;
 }
 .data-field-head>div:nth-child(2){
-  background-color: rgb(226, 208, 43);
+  background-color: gold;
   min-width: 11.5cm;
 }.data-field-head>div:nth-child(3){
-  background-color: rgb(65, 182, 218);
-  min-width: 1cm;
+  background-color: gold;
+  width: 1cm;
 }
 .data-field-head>div:nth-child(4){
-  background-color: rgb(43, 226, 125);
-  min-width: 2cm;
+  background-color: gold;
+  width: 2cm;
 }
 .data-field-head>div:nth-child(4){
-  background-color: rgb(205, 43, 226);
-  min-width: 2cm;
+  background-color: gold;
+  width: 2cm;
 }
 .data-field-head>div:nth-child(5){
-  background-color: rgb(226, 125, 43);
-  min-width: 2cm;
+  background-color: gold;
+  width: 2.5cm;
 }
 .data-field-head>div:nth-child(6){
-  background-color: rgb(43, 226, 73);
-  min-width: 2cm;
+  background-color: gold;
+  width: 2cm;
 }
 .data-field-head>div:nth-child(7){
-  background-color: blueviolet;
-  min-width: 2cm;
+  background-color: gold;
+  width: 2cm;
 }
 .data-field-head>div:nth-child(8){
-  background-color: rgb(43, 107, 226);
-  min-width: 3cm;
+  background-color:gold;
+  width: 2.5cm;
 }
 
 /* data field  */
 .data-field-data_div{
-  background-color: rgb(60, 255, 0);
+  /* background-color: rgb(60, 255, 0); */
   width: 24.5cm;
 display: flex;
 justify-content: center;
 border-top:1px solid black;
+/* border-left:1px solid black; */
+border-right:1px solid black;
+
+
+
 }
 .data-field-data_div>div{
   background-color: blueviolet;
-  min-width: 50px;
+  /* min-width: 50px; */
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 1px;
+  border-left: 1px solid black;
 }
 .data-field-data_div>div:nth-child(2){
 /* width: 400px; */
@@ -74,48 +83,80 @@ display: block;
 }
 
 .data-field-data_div>div:nth-child(1){
-  background-color: rgb(86, 226, 43);
-  min-width: 1cm;
+  background-color:white;
+  width: 1cm;
 }
 .data-field-data_div>div:nth-child(2){
-  background-color: rgb(226, 208, 43);
-  min-width: 11.5cm;
+  background-color: white;
+  width: 11.5cm;
 }.data-field-data_div>div:nth-child(3){
-  background-color: rgb(65, 182, 218);
-  min-width: 1cm;
+  background-color: white;
+  width: 1cm;
 }
 .data-field-data_div>div:nth-child(4){
-  background-color: rgb(43, 226, 125);
-  min-width: 2cm;
+  background-color: white;
+  width: 2cm;
 }
 .data-field-data_div>div:nth-child(4){
-  background-color: rgb(205, 43, 226);
-  min-width: 2cm;
+  background-color: white;
+  width: 2cm;
 }
 .data-field-data_div>div:nth-child(5){
-  background-color: rgb(226, 125, 43);
-  min-width: 2cm;
+  background-color: white;
+  width: 2.5cm;
 }
 .data-field-data_div>div:nth-child(6){
-  background-color: rgb(43, 226, 73);
-  min-width: 2cm;
+  background-color:white;
+  width: 2cm;
 }
 .data-field-data_div>div:nth-child(7){
-  background-color: blueviolet;
-  min-width: 2cm;
+  background-color: white;
+  width: 2cm;
 }
 .data-field-data_div>div:nth-child(8){
-  background-color: rgb(43, 107, 226);
-  min-width: 3cm;
+  background-color: white;
+  width: 2.5cm;
 }
 /* image part inside 2nd div */
 .data-field-data_div>div:nth-child(2)>div{
-  background-color: rgb(43, 226, 113);
-  border: 2px solid black;
+  /* background-color: rgb(43, 226, 113); */
+  /* border: 2px solid black; */
  
 }
+.data-field-data_div>div:nth-child(2)>div>:nth-child(1){
+  /* background-color: rgb(43, 226, 113); */
+  border-top: 2px solid black;
+  
+ 
+}
+/* text inside div */
+.data-field-data_div>div{
+  /* background-color: rgb(43, 226, 113); */
+  /* border-top: 2px solid rgb(15, 15, 15); */
+font-size: 23px;
+color: black;
+  text-align:  center;
+  
+ 
+}
+.data-field-data_div>div:nth-child(2){
+  /* background-color: rgb(43, 226, 113); */
+  /* border-top: 2px solid rgb(15, 15, 15); */
+  text-align:  center;
+  font-size: 25;
+  
+ 
+}
+.da
 .data-field-data_div>div:nth-child(2)>div>:nth-child(1)>div{
-  background-color: rgb(43, 226, 113);
+  /* background-color: rgb(43, 226, 113); */
+  /* border-top: 2px solid rgb(15, 15, 15); */
+  border-radius: 30px;
+ 
+}
+.data-field-data_div>div:nth-child(2)>div>:nth-child(1)>div>img{
+  /* background-color: rgb(43, 226, 113); */
   border: 2px solid rgb(231, 20, 20);
+  border-radius: 30px;
  
 }
