--- a/data-field.css
+++ b/data-field.css
@@ -17,6 +17,7 @@ justify-content: center;
   align-items: center;
   font-size: 20px;
   border: 1px solid black;
+  /* color: red; */
 }
 .data-field-head>div:nth-child(1){
   background-color: gold;
@@ -133,7 +134,7 @@ display: block;
 .data-field-data_div>div{
   /* background-color: rgb(43, 226, 113); */
   /* border-top: 2px solid rgb(15, 15, 15); */
-font-size: 23px;
+font-size: 19px;
 color: black;
   text-align:  center;
   
