--- a/total_calc.css
+++ b/total_calc.css
@@ -10,4 +10,14 @@
 }
 #final_discount{
   font-size: 17px;
+  width: 40px;
+ 
+}
+/* #all_total_amount{
+  width: 100px;
+} */
+#final_discount::-webkit-outer-spin-button,
+#final_discount::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
