--- a/head.css
+++ b/head.css
@@ -64,6 +64,8 @@ body{
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  background-color: blueviolet;
+  margin-bottom: 20px;
 
 }
 #bis_logo_img{
