--- a/head.css
+++ b/head.css
@@ -66,7 +66,7 @@ body{
   align-items: flex-start;
   background-color: blueviolet;
   margin-bottom: 20px;
-
+text-align: center;
 }
 #bis_logo_img{
   height: 70px;
