--- a/popup.css
+++ b/popup.css
@@ -15,7 +15,7 @@
 
 @media only screen and (max-width: 600px) {
   body {
-    background-color: rgb(22, 179, 231);
+    /* background-color: rgb(22, 179, 231); */
   }
     #window_popup1{
       top: 250px;
